# tachyon

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
tachyon/: __init__.py  __main__.py  app.py  config.py  palette.py  pty_backend.py  theme.tcss
tachyon/widgets/: boot.py  deck.py  files.py  globe.py  help.py  keys.py  monitors.py  network.py  repo.py  resize.py  term.py  worldmap.py
tests/: test_app.py  test_config.py  test_files.py  test_modules.py  test_network.py  test_pty_backend.py  test_terminal.py
