[project]
name = "tachyon"
version = "0.1.0"
description = "A sci-fi terminal environment in your terminal — eDEX-UI as a TUI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil>=7.2.2",
    "ptyprocess>=0.7.0; sys_platform != 'win32'",
    "pyte>=0.8.2",
    "pywinpty>=2.0.12; sys_platform == 'win32'",
    "textual>=8.2.8",
]

[project.scripts]
tachyon = "tachyon.app:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tachyon"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
